some layout issues fixed

--- a/src/examples/app.scss
+++ b/src/examples/app.scss
@@ -76,7 +76,7 @@ button {
   background-color: white;
   display: flex;
   flex-direction: column;
-  width: 30vw;
+  width: 15vw;
 
   &.left {
     resize: horizontal;
@@ -180,7 +180,7 @@ button {
   resize: horizontal;
   overflow: auto;
   position: relative;
-  width: 45vw;
+  width: 55vw;
 }
 
 
